force-app/main/default/objects/Upsell_Talk_Track__mdt/Upsell_Talk_Track__mdt.object-meta.xml
<CustomObject>
    <label>Upsell Talk Track</label>
    <pluralLabel>Upsell Talk Tracks</pluralLabel>
</CustomObject>