force-app/main/default/objects/Upsell_Talk_Track__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When false, UpsellCoachService.recommend() will skip this talk-track. Lets the demo presenter toggle availability without deleting records.</description>
</CustomField>