force-app/main/default/objects/Upsell_Talk_Track__mdt/fields/Estimated_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Value__c</fullName>
    <label>Estimated Annual Value</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Reasonable USD figure for the annual revenue this attach is expected to produce if the customer says Yes. Used by Manager Coaching dashboard to roll up revenue-from-route.</description>
</CustomField>