force-app/main/default/objects/Upsell_Talk_Track__mdt/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Stable enum-like code that UpsellCoachService matches to select a talk-track for a given (Service_Line, Reason) pair. Examples: NEIGHBOR_BOUGHT_MOSQUITO, FL_TERMITE_SEASON_PEAK, CONDUCIVE_CONDITIONS_FLAGGED.</description>
</CustomField>