force-app/main/default/objects/Upsell_Talk_Track__mdt/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Service Line</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Which Massey service line this talk-track is pitching. Matches Asset.Service_Line__c values.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pest</fullName><default>false</default><label>Pest</label></value>
            <value><fullName>Termite</fullName><default>false</default><label>Termite</label></value>
            <value><fullName>Mosquito</fullName><default>false</default><label>Mosquito</label></value>
            <value><fullName>Lawn</fullName><default>false</default><label>Lawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>