force-app/main/default/objects/Upsell_Talk_Track__mdt/fields/Talk_Track__c.field-meta.xml
<CustomField>
    <fullName>Talk_Track__c</fullName>
    <label>Talk Track</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Empathetic, low-pressure "While I'm here..." script the tech or agent reads to the customer. Tunable without code deploy.</description>
</CustomField>